fix task worker heartbeat tests