@@ -11,7 +11,8 @@ import io.littlehorse.common.model.corecommand.subcommand.internals.TaskWorkerAs
 import io.littlehorse.common.model.getable.core.taskworkergroup.HostModel;
 import io.littlehorse.common.model.getable.core.taskworkergroup.TaskWorkerGroupModel;
 import io.littlehorse.common.model.getable.core.taskworkergroup.TaskWorkerMetadataModel;
-import io.littlehorse.server.streams.topology.core.ExecutionContext;
+import io.littlehorse.server.streams.topology.core.ProcessorExecutionContext;
+import io.littlehorse.server.streams.util.InternalHosts;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.Date;
@@ -25,19 +26,19 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 import net.datafaker.Faker;
 import org.junit.jupiter.api.Test;
+import org.mockito.Answers;
 import org.mockito.ArgumentCaptor;
 
 public class TaskWorkerHeartBeatTest {
 
     private Faker faker = new Faker();
 
-    private ExecutionContext mockExecutionContext = mock();
-    private TaskWorkerAssignor assignor = spy(new RoundRobinAssignor());
-    private LHServerConfig lhConfig = mock(LHServerConfig.class);
-    private TaskWorkerHeartBeatRequestModel taskWorkerHeartBeat = new TaskWorkerHeartBeatRequestModel(assignor);
-    private ArgumentCaptor<TaskWorkerGroupModel> taskWorkerCaptor = ArgumentCaptor.forClass(TaskWorkerGroupModel.class);
-
-    private final String tenantId = "myTenandId";
+    private final ProcessorExecutionContext executionContext = mock(Answers.RETURNS_DEEP_STUBS);
+    private final TaskWorkerAssignor assignor = spy(new RoundRobinAssignor());
+    private final LHServerConfig lhConfig = mock(LHServerConfig.class);
+    private final TaskWorkerHeartBeatRequestModel taskWorkerHeartBeat = new TaskWorkerHeartBeatRequestModel(assignor);
+    private final ArgumentCaptor<TaskWorkerGroupModel> taskWorkerCaptor =
+            ArgumentCaptor.forClass(TaskWorkerGroupModel.class);
 
     @Test
     void doNotRemoveTaskWorkerIfItJustSentAHeartbeat() {
@@ -45,7 +46,7 @@ public class TaskWorkerHeartBeatTest {
         taskWorkerGroup.taskWorkers = generateTaskWorkersMetadata(2);
 
         List<TaskWorkerMetadataModel> taskWorkerMetadatas =
-                taskWorkerGroup.taskWorkers.values().stream().collect(Collectors.toList());
+                taskWorkerGroup.taskWorkers.values().stream().toList();
 
         TaskWorkerMetadataModel taskWorkerToKeep = taskWorkerMetadatas.get(1);
         taskWorkerHeartBeat.clientId = taskWorkerToKeep.clientId;
@@ -54,13 +55,13 @@ public class TaskWorkerHeartBeatTest {
 
         Set<HostModel> generateHosts = generateHosts(2);
 
-        /*when(mockExecutionContext.get(any())).thenReturn(taskWorkerGroup);
-        when(mockExecutionContext.getInternalHosts()).thenReturn(new InternalHosts(null, generateHosts));
-        when(mockExecutionContext.getAdvertisedHost(any(), any())).thenReturn(mock());*/
+        when(executionContext.getableManager().get(any())).thenReturn(taskWorkerGroup);
+        when(executionContext.getInternalHosts()).thenReturn(new InternalHosts(null, generateHosts));
+        when(executionContext.getAdvertisedHost(any(), any())).thenReturn(mock());
 
-        taskWorkerHeartBeat.process(mock(), lhConfig);
+        taskWorkerHeartBeat.process(executionContext, lhConfig);
 
-        // verify(lhdao).put(taskWorkerCaptor.capture());
+        verify(executionContext.getableManager()).put(taskWorkerCaptor.capture());
 
         assertThat(taskWorkerGroup.taskWorkers).contains(Map.entry(taskWorkerToKeep.clientId, taskWorkerToKeep));
         assertThat(taskWorkerGroup.taskWorkers).hasSize(2);
@@ -72,7 +73,7 @@ public class TaskWorkerHeartBeatTest {
         taskWorkerGroup.taskWorkers = generateTaskWorkersMetadata(2);
 
         List<TaskWorkerMetadataModel> taskWorkerMetadatas =
-                taskWorkerGroup.taskWorkers.values().stream().collect(Collectors.toList());
+                taskWorkerGroup.taskWorkers.values().stream().toList();
         Set<HostModel> generateHosts = generateHosts(2);
 
         TaskWorkerMetadataModel taskWorkerToKeep = taskWorkerMetadatas.get(1);
@@ -80,13 +81,13 @@ public class TaskWorkerHeartBeatTest {
 
         taskWorkerToKeep.latestHeartbeat = Date.from(Instant.now().minus(1, ChronoUnit.DAYS));
 
-        /*when(lhdao.get(any())).thenReturn(taskWorkerGroup);
-        when(lhdao.getInternalHosts()).thenReturn(new InternalHosts(null, generateHosts));
-        when(lhdao.getAdvertisedHost(any(), any())).thenReturn(mock());*/
+        when(executionContext.getableManager().get(any())).thenReturn(taskWorkerGroup);
+        when(executionContext.getInternalHosts()).thenReturn(new InternalHosts(null, generateHosts));
+        when(executionContext.getAdvertisedHost(any(), any())).thenReturn(mock());
 
-        taskWorkerHeartBeat.process(mock(), lhConfig);
+        taskWorkerHeartBeat.process(executionContext, lhConfig);
 
-        // verify(lhdao).put(taskWorkerCaptor.capture());
+        verify(executionContext.getableManager()).put(taskWorkerCaptor.capture());
         verify(assignor).assign(anyCollection(), anyCollection());
     }
 
@@ -104,14 +105,14 @@ public class TaskWorkerHeartBeatTest {
 
         taskWorkerToKeep.latestHeartbeat = Date.from(Instant.now().minus(1, ChronoUnit.DAYS));
 
-        /*when(lhdao.get(any())).thenReturn(taskWorkerGroup);
-        when(lhdao.getInternalHosts())
+        when(executionContext.getableManager().get(any())).thenReturn(taskWorkerGroup);
+        when(executionContext.getInternalHosts())
                 .thenReturn(new InternalHosts(null, generateHosts))
                 .thenReturn(new InternalHosts(generateHosts, generateHosts));
-        when(lhdao.getAdvertisedHost(any(), any())).thenReturn(mock());*/
+        when(executionContext.getAdvertisedHost(any(), any())).thenReturn(mock());
 
-        taskWorkerHeartBeat.process(mock(), lhConfig);
-        taskWorkerHeartBeat.process(mock(), lhConfig);
+        taskWorkerHeartBeat.process(executionContext, lhConfig);
+        taskWorkerHeartBeat.process(executionContext, lhConfig);
 
         verify(assignor).assign(anyCollection(), anyCollection());
     }
@@ -130,21 +131,21 @@ public class TaskWorkerHeartBeatTest {
 
         taskWorkerToKeep.latestHeartbeat = Date.from(Instant.now().minus(1, ChronoUnit.DAYS));
 
-        /*when(lhdao.get(any())).thenReturn(taskWorkerGroup);
-        when(lhdao.getInternalHosts())
+        when(executionContext.getableManager().get(any())).thenReturn(taskWorkerGroup);
+        when(executionContext.getInternalHosts())
                 .thenReturn(new InternalHosts(null, generateHosts))
                 .thenReturn(new InternalHosts(generateHosts, generateHosts));
-        when(lhdao.getAdvertisedHost(any(), any())).thenReturn(mock());*/
+        when(executionContext.getAdvertisedHost(any(), any())).thenReturn(mock());
 
-        taskWorkerHeartBeat.process(mock(), lhConfig);
-        taskWorkerHeartBeat.process(mock(), lhConfig);
+        taskWorkerHeartBeat.process(executionContext, lhConfig);
+        taskWorkerHeartBeat.process(executionContext, lhConfig);
         verify(assignor).assign(anyCollection(), anyCollection());
 
         Set<HostModel> newHost = new HashSet<>(generateHosts);
         newHost.addAll(generateHosts(1));
 
-        // when(mockExecutionContext.getInternalHosts()).thenReturn(new InternalHosts(generateHosts, newHost));
-        taskWorkerHeartBeat.process(mock(), lhConfig);
+        when(executionContext.getInternalHosts()).thenReturn(new InternalHosts(generateHosts, newHost));
+        taskWorkerHeartBeat.process(executionContext, lhConfig);
 
         verify(assignor, times(2)).assign(anyCollection(), anyCollection());
     }
@@ -165,13 +166,13 @@ public class TaskWorkerHeartBeatTest {
 
         Set<HostModel> generateHosts = generateHosts(2);
 
-        /*when(lhdao.get(any())).thenReturn(taskWorkerGroup);
-        when(lhdao.getInternalHosts()).thenReturn(new InternalHosts(null, generateHosts));
-        when(lhdao.getAdvertisedHost(any(), any())).thenReturn(mock());*/
+        when(executionContext.getableManager().get(any())).thenReturn(taskWorkerGroup);
+        when(executionContext.getInternalHosts()).thenReturn(new InternalHosts(null, generateHosts));
+        when(executionContext.getAdvertisedHost(any(), any())).thenReturn(mock());
 
-        taskWorkerHeartBeat.process(mock(), lhConfig);
+        taskWorkerHeartBeat.process(executionContext, lhConfig);
 
-        // verify(lhdao).put(taskWorkerCaptor.capture());
+        verify(executionContext.getableManager()).put(taskWorkerCaptor.capture());
         verify(assignor).assign(anyCollection(), anyCollection());
         assertThat(taskWorkerGroup.taskWorkers)
                 .doesNotContain(Map.entry(taskWorkerToBeRemoved.clientId, taskWorkerToBeRemoved));
